--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,7 @@ body {
     display: flex;
     height: 64px;
     background-color: #fff;
-    margin: 4px 4px;
+    margin: 4px;
     border-radius: 8px;
     box-shadow: 1px 1px rgba(0, 0, 0, .2);
 }
@@ -112,7 +112,7 @@ body {
     background-position: 0 -128px;
 }
 nav {
-    margin: 10px 4px 0;
+    margin: 4px;
     border-radius: 8px;
     overflow: hidden;
 }
