--- a/css/index.css
+++ b/css/index.css
@@ -69,11 +69,38 @@ body {
     background-size: 104px auto;
 }
 .focus {
+    position: relative;
     margin-top: 44px;
+    overflow: hidden;
+}
+.focus ul {
+    width: 500%;
+    margin-left: -100%;
+}
+.focus ul li {
+    float: left;
+    width: 20%;
 }
 .focus img {
     width: 100%;
 }
+.focus ol {
+    position: absolute;
+    right: 7px;
+    bottom: 2px;
+}
+.focus ol li{
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    border-radius: 2px;
+    background-color: #fff;
+    transition: all .3s;
+}
+.focus ol .current {
+    width: 15px;
+}
+
 .local-nav {
     display: flex;
     height: 64px;
